--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title> Class site </title>
 </head>
 <body>
-<h1> Qing's Class Site </h1>
+<h1> Qing's Class Site for homework </h1>
 </body>
 </html>
