--- a/hw/index.html
+++ b/hw/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Qing Li CIM 111</h1>
+    <h2>Assignment</h2>
 <ul>
 <li>    <a href="resume">Resume</a>   </li>
 <li>  <a href="resume_css">Resume CSS</a></li>
@@ -14,7 +15,6 @@
 <li><a href="jquery2">jQuery2</a></li>
 <li><a href="final">Final</a></li>
 
-</ul>
 
 
 
