--- a/hw/resume/index.html
+++ b/hw/resume/index.html
@@ -1,16 +1,80 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Qing Li's Resume</title>
-  </head>
-  <body>
-<h1>Qing Li</h1>
-<h2>Student</h2>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="author" content="Qing Li">
+  <meta name="description" content="resume for class">
+  <title>Qing Li's Resume</title>
+</head>
+
+<body>
+  <h1>Qing Li</h1>
+  <address>
+    <p><a href="<a href=" mailto:1324324234.miami.edu?subject=feedback">1324324234@miami.edu</a></p>
+    <p>1231 Dickinson Drive, Coral Gables, FL33149</p>
+  </address>
+<img width="75" src="image/zhengjianzhao.jpeg" alt="Image" />
+
+  <h2> Student </h2>
+  <p>I am a junior student studying at University of Miami. I am looking for a summer internship.</p>
+  <!-- Education -->
+  <h3>Education </h3>
+  <hr />
+  <p> <b>University of Miami</b>
+
+    <a href="https://welcome.miami.edu/">UM</a>
+    <br />
+    <i>Bachelor of Busniess Administration</i>
+    <br />
+    <a href="https://www.bus.miami.edu//">Business School</a>
+    <table>
+      <tr>
+        <th>Major</th>
+
+        <td>Accounting</td>
+      </tr>
+
+      <tr>
+        <th>Minor</th>
+        <td>Art and Art History</td>
+
+      </tr>
+    </table>
+  </p>
+  <!--Work Experience  -->
+  <h3>Work Experience</h3>
+  <hr />
+  <p>
+    <b>Student Union of DUT High School</b>
+    <br />
+    <i>- Head of Finance Club</i>
+
+    <br />
+    <b>Feida International CO. Ltd</b>
+    <br />
+    <i> - Accounting Intern</i>
+    <br />
+    <ul>
+      <li>Accurately input data into general ledgers</li>
+      <li>Reviewed payment, credits and other transcations</li>
+      <li>Reviewed accounting report</li>
+      <li>Reached out to customers to verify information and follow up on issues</li>
+    </ul>
+  </p>
+  <h3>Skills</h3>
+  <hr />
+  <p>
+    <ol>
+      <li>General Ledger accounting</li>
+      <li>Relationship Building</li>
+      <li>Effective time Management</li>
+      <li>Adobe Lightroom</li>
+    </ol>
 
 
+  </p>
 
+</body>
 
-
-  </body>
 </html>
