--- a/hw/resume/index.html
+++ b/hw/resume/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Qing Li</h1>
   <address>
-    <p><a href="<a href=" mailto:1324324234.miami.edu?subject=feedback">1324324234@miami.edu</a></p>
+    <p><a href="<a href=" mailto:1324324234.miami.edu?subject=feedback>1324324234@miami.edu</a></p>
     <p>1231 Dickinson Drive, Coral Gables, FL33149</p>
   </address>
 <img width="75" src="image/zhengjianzhao.jpeg" alt="Image" />
@@ -21,7 +21,7 @@
   <!-- Education -->
   <h3>Education </h3>
   <hr />
-  <p> <b>University of Miami</b>
+<b>University of Miami</b>
 
     <a href="https://welcome.miami.edu/">UM</a>
     <br />
@@ -41,11 +41,11 @@
 
       </tr>
     </table>
-  </p>
+
   <!--Work Experience  -->
   <h3>Work Experience</h3>
   <hr />
-  <p>
+
     <b>Student Union of DUT High School</b>
     <br />
     <i>- Head of Finance Club</i>
@@ -61,10 +61,10 @@
       <li>Reviewed accounting report</li>
       <li>Reached out to customers to verify information and follow up on issues</li>
     </ul>
-  </p>
+
   <h3>Skills</h3>
   <hr />
-  <p>
+
     <ol>
       <li>General Ledger accounting</li>
       <li>Relationship Building</li>
@@ -73,7 +73,7 @@
     </ol>
 
 
-  </p>
+
 
 </body>
 
