--- a/hw/resume/index.html
+++ b/hw/resume/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Qing Li</h1>
   <address>
-    <p><a href="<a href=" mailto:1324324234.miami.edu?subject=feedback>1324324234@miami.edu</a></p>
+    <p><a href="<a href=" mailto:1324324234.miami.edu>1324324234@miami.edu</a></p>
     <p>1231 Dickinson Drive, Coral Gables, FL33149</p>
   </address>
 <img width="75" src="image/zhengjianzhao.jpeg" alt="Image" />
