--- a/hw/resume/index.html
+++ b/hw/resume/index.html
@@ -10,8 +10,10 @@
 
 <body>
   <h1>Qing Li</h1>
-  <a href="mailto:12345678@miami.edu?subject=feedback">12345678@miami.edu</a>
   <address>
+  <p>
+    <a href="mailto:12345678@miami.edu?subject=feedback">12345678@miami.edu</a> </p>
+
 
     <p>1231 Dickinson Drive, Coral Gables, FL33149</p>
   </address>
