--- a/hw/resume_css/index.html
+++ b/hw/resume_css/index.html
@@ -46,7 +46,7 @@
     <i>Bachelor of Busniess Administration</i>
     <br />
     <a class="lll" href="https://www.bus.miami.edu//">Business School</a>
-    <table>
+    <table border="2">
       <tr>
         <th>Major</th>
 
