--- a/hw/resume_css/index.html
+++ b/hw/resume_css/index.html
@@ -6,14 +6,15 @@
   <meta name="author" content="Qing Li">
   <meta name="description" content="resume for class">
   <title>Qing Li's Resume</title>
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Permanent+Marker" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Permanent+Marker" rel="stylesheet">
+
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <h1>Qing Li</h1>
 
-  <ul class="navigation">
+  <ul id="navigation">
   <li> <a href="#edu">Education</a></li>
   <li><a href="#worke">Work Experience</a></li>
   <li><a href="#ski">Skills</a></li>
@@ -46,7 +47,7 @@
     <i>Bachelor of Busniess Administration</i>
     <br />
     <a class="lll" href="https://www.bus.miami.edu//">Business School</a>
-    <table border="2">
+    <table>
       <tr>
         <th>Major</th>
 
