--- a/hw/responsive/index.html
+++ b/hw/responsive/index.html
@@ -22,6 +22,7 @@
         <li><a href="#section3">CITY</a></li>
         <li><a href="#section4">LIGHT</a></li>
         <li><a href="#section5">LIFE</a></li>
+        <li><a href="#section7">Role model</a></li>
       </ul>
     </nav>
     <section id=section1>
@@ -29,7 +30,7 @@
 
       <article>
         <p class="self">
-          I am a junior student from University of Miami. I am an accounting major, but I kove Photograph. The camera records my life and my thoughts. Photograph is a way to express myself and help me to communicate with the world. I am only a
+          I am a junior student from University of Miami. I am an accounting major, but I love Photograph. The camera records my life and my thoughts. Photograph is a way to express myself and help me to communicate with the world. I am only a
           beginner now, but I always dream about to become a professional photographer.
         </p>
       </article>
@@ -46,7 +47,7 @@
         <br>
         <div class="ppp">
 
-          <p>Family is the most immortant thing in the world for me. I live with my grandparents when I was litte. It was a supurise that my grandparents took 15 hours flight to Miami to celebrate Chinese New Year with me. Chinese New Year is a
+          <p>Family is the most important thing in the world for me. I live with my grandparents when I was litte. It was a suprise that my grandparents took 15 hours flight to Miami to celebrate Chinese New Year with me. Chinese New Year is a
             festival all the families get together like Christmas. I have not celebrated with my families for 3 years. I always remember the smile on my grandma's face when I asked her to be my model. My grandpa is taciturn. He posed very seriously
             as I said without a word, like a child. </p>
         </div>
@@ -108,11 +109,44 @@
     <section id="section5">
       <h2>LIFE</h2>
       <article class="">
+        <div class="">
+
+
         <img src="images/life.jpg" alt="life">
         <img src="images/life2.jpg" alt="life2">
-        <img src="images/life3.jpg" alt="life3">
+        <img src="images/life3.JPG" alt="life3">
+
+
+        </div>
       </article>
     </section>
+<section id="section7">
+<h2>Role Model</h2>
+<article class="">
+<div class="column1">
+<h3>Felicia Simion</h3>
+<img src="images/Epiphany copy.jpg" alt="">
+<p>Felicia Simion is a young talented visual artist and freelance photographer from Romania. She decided to become a photographer when she was 13 years old.She describes it as a sudden burst of joy.  Feliciahas passion about artistic expression. She loves drawing, dancing, playing guitar and writing poem. Photograph helps her to find another side of her personality.
+
+I asked her a question: Will other people’s aesthetic will affect how you see the world?Her answer impressed me. She said if we keep an eye open and follow our own vision, the changes of getting lost become smaller. The meaning of communication with her is not only the techniques of photograph, but her spiritual world. I like photography because I want to use the
+photo as a tool to tell people my thoughts and how I see the world, which is Felicia doing.Knowing one’s spiritual world is more interests than watching a movie. </p>
+</div>
+  <div class="column2">
+  <h3>Chrissie White</h3>
+  <p>Chrissie White is an American Photographer living in Seattle, Washington. She is inspired by the different modes in which we interpret reality and will sometimes make herself lucid dream when she needs fresh ideas. Her love of bold color, uncanny circumstances, and the remote wilderness, translates into visions of a surreal and vibrant world.
+
+</p>
+<img src="images/CW.jpg" alt="">
+  </div>
+  <div class="clear">
+
+  </div>
+</article>
+
+</section>
+
+
+
     <footer>Copyright 2019 Me@UM</footer>
   </main>
 </body>
