--- a/hw/responsive/index.html
+++ b/hw/responsive/index.html
@@ -54,6 +54,9 @@
       </article>
     </section>
 
+
+
+
     <section id="section6">
       <h2>Muse</h2>
       <article>
@@ -77,22 +80,31 @@
 
     <section id="section3">
       <h2>CITY</h2>
-      <article class="article2">
-        <div>
+      <article class="a2">
+        <div class="article2">
           <img src="images/city1.jpg" alt="city1">
-        </div>
-        <div>
+
           <img src="images/city2.jpg" alt="city2">
-        </div>
-        <div>
+
           <img src="images/city3.jpg" alt="city3">
-        </div>
-        <div class="">
+
           <img src="images/city4.jpg" alt="city4">
         </div>
       </article>
+      <article class="a3">
+        <div class="a3">
+          <p>
+         Looking the cold steels, I always think about the nature and human. To protect our home Earth, what can we do? Human works are almost everywhere on the earth. What we can not deny is that the industry improved human life. As the same time, it is destroying us. Embrace or discard?</p>
+        </div>
+
+      </article>
     </section>
 
+<section>
+  <div class="clear">
+
+  </div>
+</section>
 
     <section id="section4">
       <h2>LIGHT</h2>
@@ -122,21 +134,22 @@
     </section>
 <section id="section7">
 <h2>Role Model</h2>
-<article class="">
-<div class="column1">
+<article>
+<div>
 <h3>Felicia Simion</h3>
-<img src="images/Epiphany copy.jpg" alt="">
-<p>Felicia Simion is a young talented visual artist and freelance photographer from Romania. She decided to become a photographer when she was 13 years old.She describes it as a sudden burst of joy.  Feliciahas passion about artistic expression. She loves drawing, dancing, playing guitar and writing poem. Photograph helps her to find another side of her personality.
+<img src="images/Epiphany copy.jpg" alt="a" class="column1">
+<p>Felicia Simion is a young talented visual artist and freelance photographer from Romania. She decided to become a photographer when she was 13 years old.She describes it as a sudden burst of joy.  Felicia has passion about artistic expression. She loves drawing, dancing, playing guitar and writing poem. Photograph helps her to find another side of her personality.
 
-I asked her a question: Will other people’s aesthetic will affect how you see the world?Her answer impressed me. She said if we keep an eye open and follow our own vision, the changes of getting lost become smaller. The meaning of communication with her is not only the techniques of photograph, but her spiritual world. I like photography because I want to use the
-photo as a tool to tell people my thoughts and how I see the world, which is Felicia doing.Knowing one’s spiritual world is more interests than watching a movie. </p>
+I asked her a question: Will other people’s aesthetic will affect how you see the world? Her answer impressed me. She said if we keep an eye open and follow our own vision, the changes of getting lost become smaller. The meaning of communication with her is not only the techniques of photograph, but her spiritual world. I like photography because I want to use the
+photo as a tool to tell people my thoughts and how I see the world, which is Felicia doing. Knowing one’s spiritual world is more interests than watching a movie. </p>
 </div>
-  <div class="column2">
+<br>
+  <div>
   <h3>Chrissie White</h3>
   <p>Chrissie White is an American Photographer living in Seattle, Washington. She is inspired by the different modes in which we interpret reality and will sometimes make herself lucid dream when she needs fresh ideas. Her love of bold color, uncanny circumstances, and the remote wilderness, translates into visions of a surreal and vibrant world.
 
 </p>
-<img src="images/CW.jpg" alt="">
+<img src="images/CW2.jpg" alt="b" class="column2">
   </div>
   <div class="clear">
 
