--- a/hw/responsive/index.html
+++ b/hw/responsive/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Qing Photograph</title>
+<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Germania+One|Lobster|Merriweather|Satisfy|Shadows+Into+Light" rel="stylesheet">
+
   <link rel="stylesheet" href="css/mobile.css" media="(max-width: 780px)">
   <link rel="stylesheet" href="css/desktop.css" media="(min-width: 781px)">
   <link rel="stylesheet" href="css/styles.css">
@@ -29,6 +31,9 @@
       <h2>ABOUT</h2>
 
       <article>
+        <blockquote cite="http://www.brainyquote.com/quotes/simone_de_beauvoir_149611" class="bbb">
+          Change your life today. Do not gamble on the future, act now, without delay.
+        </blockquote>
         <p class="self">
           I am a junior student from University of Miami. I am an accounting major, but I love Photograph. The camera records my life and my thoughts. Photograph is a way to express myself and help me to communicate with the world. I am only a
           beginner now, but I always dream about to become a professional photographer.
@@ -108,8 +113,8 @@
 
     <section id="section4">
       <h2>LIGHT</h2>
-      <article class="article3">
-        <div class="">
+      <article>
+        <div>
           <img src="images/light1.jpg" alt="light1">
         </div>
         <div>
@@ -120,8 +125,8 @@
 
     <section id="section5">
       <h2>LIFE</h2>
-      <article class="">
-        <div class="">
+      <article>
+        <div  class="s5">
 
 
         <img src="images/life.jpg" alt="life">
@@ -138,7 +143,7 @@
 <div>
 <h3>Felicia Simion</h3>
 <img src="images/Epiphany copy.jpg" alt="a" class="column1">
-<p>Felicia Simion is a young talented visual artist and freelance photographer from Romania. She decided to become a photographer when she was 13 years old.She describes it as a sudden burst of joy.  Felicia has passion about artistic expression. She loves drawing, dancing, playing guitar and writing poem. Photograph helps her to find another side of her personality.
+<p class="aa">Felicia Simion is a young talented visual artist and freelance photographer from Romania. She decided to become a photographer when she was 13 years old.She describes it as a sudden burst of joy.  Felicia has passion about artistic expression. She loves drawing, dancing, playing guitar and writing poem. Photograph helps her to find another side of her personality.
 
 I asked her a question: Will other people’s aesthetic will affect how you see the world? Her answer impressed me. She said if we keep an eye open and follow our own vision, the changes of getting lost become smaller. The meaning of communication with her is not only the techniques of photograph, but her spiritual world. I like photography because I want to use the
 photo as a tool to tell people my thoughts and how I see the world, which is Felicia doing. Knowing one’s spiritual world is more interests than watching a movie. </p>
@@ -146,7 +151,7 @@ photo as a tool to tell people my thoughts and how I see the world, which is Fel
 <br>
   <div>
   <h3>Chrissie White</h3>
-  <p>Chrissie White is an American Photographer living in Seattle, Washington. She is inspired by the different modes in which we interpret reality and will sometimes make herself lucid dream when she needs fresh ideas. Her love of bold color, uncanny circumstances, and the remote wilderness, translates into visions of a surreal and vibrant world.
+  <p class="aa">Chrissie White is an American Photographer living in Seattle, Washington. She is inspired by the different modes in which we interpret reality and will sometimes make herself lucid dream when she needs fresh ideas. Her love of bold color, uncanny circumstances, and the remote wilderness, translates into visions of a surreal and vibrant world.
 
 </p>
 <img src="images/CW2.jpg" alt="b" class="column2">
@@ -160,7 +165,7 @@ photo as a tool to tell people my thoughts and how I see the world, which is Fel
 
 
 
-    <footer>Copyright 2019 Me@UM</footer>
+    <footer>Copyright 2019 Qing @UM</footer>
   </main>
 </body>
 
