--- a/hw/responsive/index.html
+++ b/hw/responsive/index.html
@@ -28,9 +28,10 @@
       </ul>
     </nav>
     <section id=section1>
-      <h2>ABOUT</h2>
+
 
       <article>
+        <h2>ABOUT</h2>
         <blockquote cite="http://www.brainyquote.com/quotes/simone_de_beauvoir_149611" class="bbb">
           Change your life today. Do not gamble on the future, act now, without delay.
         </blockquote>
@@ -42,8 +43,9 @@
     </section>
 
     <section id=section2>
-      <h2>Love</h2>
+
       <article>
+        <h2>Love</h2>
         <div class="article1">
 
           <img src="images/family.jpg" alt="family">
@@ -63,8 +65,9 @@
 
 
     <section id="section6">
-      <h2>Muse</h2>
+
       <article>
+          <h2>Muse</h2>
         <div class="article6">
 
           <img src="images/muse1.jpg" alt="muse1">
@@ -112,8 +115,9 @@
 </section>
 
     <section id="section4">
-      <h2>LIGHT</h2>
+
       <article>
+        <h2>LIGHT</h2>
         <div>
           <img src="images/light1.jpg" alt="light1">
         </div>
@@ -124,8 +128,9 @@
     </section>
 
     <section id="section5">
-      <h2>LIFE</h2>
+
       <article>
+        <h2>LIFE</h2>
         <div  class="s5">
 
 
@@ -138,8 +143,9 @@
       </article>
     </section>
 <section id="section7">
-<h2>Role Model</h2>
+
 <article>
+  <h2>ROLE model</h2>
 <div>
 <h3>Felicia Simion</h3>
 <img src="images/Epiphany copy.jpg" alt="a" class="column1">
@@ -154,7 +160,7 @@ photo as a tool to tell people my thoughts and how I see the world, which is Fel
   <p class="aa">Chrissie White is an American Photographer living in Seattle, Washington. She is inspired by the different modes in which we interpret reality and will sometimes make herself lucid dream when she needs fresh ideas. Her love of bold color, uncanny circumstances, and the remote wilderness, translates into visions of a surreal and vibrant world.
 
 </p>
-<img src="images/CW2.jpg" alt="b" class="column2">
+<img src="images/CW2.jpg" class="column2">
   </div>
   <div class="clear">
 
