--- a/hw/jquery/index.html
+++ b/hw/jquery/index.html
@@ -29,9 +29,9 @@
   <section id="step3">
     <img class="grid" src="images/13.jpg" alt="">
     <img class="grid" src="images/4566.jpg" alt="">
-    <p>Now, it is the time for our magic Seasoning to work.
+    <p> Now, it is the time for our magic Seasoning to work.
       <hr>
-      Add
+      Add </p>
       <ul>
         <li>2 spoon soy sauce</li>
         <li>2 spoon dark soy sauce</li>
@@ -42,7 +42,7 @@
         <li>Salt</li>
         <li>Last step: Add Enough Water</li>
       </ul>
-    </p>
+
   </section>
   <section id="step4">
     <img src="images/55.jpg" alt="">
