--- a/hw/jquery/index.html
+++ b/hw/jquery/index.html
@@ -29,9 +29,9 @@
   <section id="step3">
     <img class="grid" src="images/13.jpg" alt="">
     <img class="grid" src="images/4566.jpg" alt="">
-    <p> Now, it is the time for our magic Seasoning to work.
+    <p> Now, it is the time for our magic Seasoning to work. </p>
       <hr>
-      Add </p>
+      Add
       <ul>
         <li>2 spoon soy sauce</li>
         <li>2 spoon dark soy sauce</li>
