--- a/hw/jquery2/index.html
+++ b/hw/jquery2/index.html
@@ -2,6 +2,9 @@
   <head>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 
+<title>Vacation Folder</title>
+<link rel="stylesheet" href="styles.css">
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
     <link href="https://unpkg.com/nanogallery2@2.4.1/dist/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
@@ -10,8 +13,10 @@
   </head>
   <body>
 
-    <h1>gallery made with nanogallery2</h1>
-
+    <h1>Miami Seaquarium</h1>
+<p>
+  I always love the sea. Even I can not swim, I still attracted by the mystory of underwater world.
+</p>
     <div id="my_nanogallery2" data-nanogallery2='{
 
         "thumbnailHeight":           200,
@@ -33,26 +38,31 @@
         "galleryMaxRows":            1,
         "galleryDisplayMode":        "rows",
         "galleryDisplayMode":        "pagination",
-        "thumbnailLabel":            { "display" : false }
+        "thumbnailLabel":            { "display" : false },
+        "thumbnailDisplayTransition":          "scaleUp",
+"thumbnailDisplayTransitionDuration":  500,
+"thumbnailDisplayInterval":            30,
+"galleryDisplayTransition":            "rotateX",
+"galleryDisplayTransitionDuration":    500
 
 
       }'>
-  <a href="images/2.jpg" data-ngthumb="images/2.jpg">title 1</a>
+  <a href="images/2.jpg" data-ngthumb="images/2.jpg">Flamingo</a>
   <a href="images/3.jpg" data-ngthumb="images/3.jpg">Flamingo</a>
-  <a href="images/4.jpg" data-ngthumb="images/4.jpg">title 3</a>
-  <a href="images/h1.jpg" data-ngthumb="images/h1.jpg">title 3</a>
-  <a href="images/5.jpg" data-ngthumb="images/5.jpg">title 3</a>
-  <a href="images/6.jpg" data-ngthumb="images/6.jpg">title 3</a>
-<a href="images/7.jpg" data-ngthumb="images/7.jpg">title 3</a>
-<a href="images/8.jpg" data-ngthumb="images/8.jpg">title 3</a>
-<a href="images/9.jpg" data-ngthumb="images/9.jpg">title 3</a>
-<a href="images/10.jpg" data-ngthumb="images/10.jpg">title 3</a>
-<a href="images/11.jpg" data-ngthumb="images/11.jpg">title 3</a>
-<a href="images/22.jpg" data-ngthumb="images/22.jpg">title 3</a>
-<a href="images/33.jpg" data-ngthumb="images/33.jpg">title 3</a>
-<a href="images/44.jpg" data-ngthumb="images/44.jpg">title 3</a>
-<a href="images/55.jpg" data-ngthumb="images/55.jpg">title 3</a>
-<a href="images/66.jpg" data-ngthumb="images/66.jpg">title 3</a>
+  <a href="images/4.jpg" data-ngthumb="images/4.jpg">Children with nature</a>
+  <a href="images/h1.jpg" data-ngthumb="images/h1.jpg">Flamingo</a>
+  <a href="images/5.jpg" data-ngthumb="images/5.jpg">Dophine</a>
+  <a href="images/6.jpg" data-ngthumb="images/6.jpg">Child and performing Dophine</a>
+<a href="images/7.jpg" data-ngthumb="images/7.jpg">Dophine</a>
+<a href="images/8.jpg" data-ngthumb="images/8.jpg">Dophine</a>
+<a href="images/9.jpg" data-ngthumb="images/9.jpg">Dophine</a>
+<a href="images/10.jpg" data-ngthumb="images/10.jpg">Dophine</a>
+<a href="images/11.jpg" data-ngthumb="images/11.jpg">Dophine</a>
+<a href="images/22.jpg" data-ngthumb="images/22.jpg">Dophine</a>
+<a href="images/33.jpg" data-ngthumb="images/33.jpg">Dophine</a>
+<a href="images/44.jpg" data-ngthumb="images/44.jpg">Seal</a>
+<a href="images/55.jpg" data-ngthumb="images/55.jpg">Whale and her toy</a>
+<a href="images/66.jpg" data-ngthumb="images/66.jpg">Trainer and her cute followers</a>
 </div>
 
 
