--- a/hw/jquery2/index.html
+++ b/hw/jquery2/index.html
@@ -4,20 +4,26 @@
 
 <title>Vacation Folder</title>
 <link rel="stylesheet" href="styles.css">
-
+<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
     <link href="https://unpkg.com/nanogallery2@2.4.1/dist/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="https://unpkg.com/nanogallery2@2.4.1/dist/jquery.nanogallery2.min.js"></script>
 
+
   </head>
   <body>
+<header>
+  <h1>Miami Seaquarium</h1>
+</header>
+  <div class="pp">
 
-    <h1>Miami Seaquarium</h1>
+
 <p>
-  I always love the sea. Even I can not swim, I still attracted by the mystory of underwater world.
+  I always love the sea. Though I can not swim, I still attracted by the mystory of underwater world.
 </p>
-    <div id="my_nanogallery2" data-nanogallery2='{
+</div>
+    <div id="my_nanogallery2"  data-nanogallery2='{
 
         "thumbnailHeight":           200,
         "thumbnailWidth":            200,
